[package]
name="aes4linux"
version="0.1.0"
edition="2021"

[dependencies]
aes-gcm = "0.10"
aes = "0.8"
block-modes = "0.9"
rand = "0.8"
argon2 = "0.5"
clap = { version = "4.0", features = ["derive"] }
zip = "0.6"
walkdir = "2.4"
zeroize = "1.6"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]